# Data-Platform

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  DATA_DICTIONARY.md  Dockerfile  LICENSE  LICENSE-DATA  LICENSE-PROPOSAL.md  README.md  REPRODUCIBILITY.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: BUILD_SEQUENCE.md  DATA_CONTRACT.md  RULES.md  quarantine-report.md  stage-3-5-source-inventory.md  stage-4-5-corroboration-inventory.md  stage-4-5-series-assembly-summary.md
docs/notes/: LICENSE-PROPOSAL.md  RELEASE-v1.0.0.md  STAGE8-CLAIM-INVENTORY.md  STAGE8-FORK-FACTS.md  divergence-findings.md  sources.md  stage3-resolution-notes.md
docs/specs/: SPEC-stage-0-1.md
report/: report.json  report.md
src/data_platform/: __init__.py
src/data_platform/analyst/: __main__.py  assemble.py  chart_specs.py  charts.py  cohort.py  derive.py  graph.py  llm.py  models.py  retrieve.py  sections.py  tools.py  verify.py
src/data_platform/bootstrap/: __main__.py  fetch.py  install.py  release.py
src/data_platform/export/: __init__.py  __main__.py  build.py  records.py  write.py
src/data_platform/harmonize/: __init__.py  assemble.py  config.py  definition.py  extract.py  historical.py  models.py  pipeline.py  reconcile.py  rollup.py  series.py  units.py  validate.py
src/data_platform/ingest/: __init__.py  archive.py  landing.py  registry.py  schema.py  transport.py
src/data_platform/ingest/adapters/: __init__.py  base.py  flagship.py  rajya_sabha.py
src/data_platform/mcp/: SHA256SUMS.txt  __init__.py  __main__.py  catalog.py  lineage.py  loader.py  query.py  refresh.py  refusals.py  schema.py  server.py
src/data_platform/normalize/: __init__.py  coerce.py  config.py  dates.py  dedupe.py  fmt.py  models.py  pipeline.py  reshape.py
src/data_platform/resolve/: aliases.py  config.py  geo.py  lgd.py  models.py  normalize_name.py  pipeline.py  scheme.py
src/data_platform/wiring/: __init__.py  driver.py  resource_specs.json  specs.py
tests/: conftest.py
tests/analyst/: evidence.py  fakes.py  test_assemble.py  test_charts.py  test_cohort.py  test_contract.py  test_derive.py  test_graph.py  test_llm.py  test_schema_facts.py  test_sections.py  test_tools.py  test_verify.py
tests/bootstrap/: test_install.py  test_release.py
tests/docs/: test_documented_commands.py
tests/export/: test_export_integration.py  test_records.py
tests/fixtures/: synthetic_dist.py
tests/fixtures/flagship/: duplicate_snapshot.json  goa_2022_2023.json  messy_row.json
tests/fixtures/rajya_sabha/: table1_cea6ee41.json  table2_e289a8fe.json
tests/harmonize/: test_assemble.py  test_definition.py  test_extract.py  test_harmonize_integration.py  test_historical.py  test_reconcile.py  test_rollup.py  test_series.py  test_series_integration.py  test_units.py  test_validate.py
tests/ingest/: test_adapters.py  test_archive.py  test_landing.py  test_offline_mode.py  test_schema_drift.py
tests/mcp/: conftest.py  test_catalog.py  test_lineage.py  test_loader.py  test_query.py  test_refresh.py  test_server.py
tests/normalize/: test_dates.py  test_dedupe.py  test_fmt.py  test_models.py  test_pipeline.py  test_reshape.py  test_types.py
tests/resolve/: test_archive_integration.py  test_district_resolution.py  test_grain_paths.py  test_normalize_name.py  test_pipeline.py  test_quarantine_detail.py  test_scheme.py  test_set_reconciliation.py  test_state_resolution.py
tests/wiring/: test_coverage.py
