[project]
name = "data-platform"
version = "0.1.0"
description = "Governed multi-source MGNREGA data layer served over MCP for AI agents."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",  # live-fetch transport only; ingestion parsing has no network dependency
    "duckdb>=1.5.4",  # in-memory query engine for the MCP server over the sealed v1.0 dist/ artifacts
    "mcp>=1.28.1",
    "langgraph>=0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pyarrow>=16",  # parquet writer for the v1 export deliverable (dist/); no core-runtime dep
]

# No source package to build yet; treat the repo as an application, not a library,
# so `uv sync` doesn't try to build/install it.
[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
mypy_path = "src"
explicit_package_bases = true

# pyarrow ships no complete type stubs; the export writer isolates all pyarrow use in one module.
[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
markers = [
    "golden: MCP tests against the real dist/v1.0 release artifacts; auto-skipped when absent.",
]
