[project]
name = "data-platform"
version = "0.1.0"
description = "Governed multi-source MGNREGA data layer served over MCP for AI agents."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",  # live-fetch transport only; ingestion parsing has no network dependency
    "duckdb>=1.5.4",  # in-memory query engine for the MCP server over the sealed v1.0 dist/ artifacts
    "mcp>=1.28.1",
    "langgraph>=0.2",
]

# The documented commands. Installing the project puts these on PATH, so nothing needs PYTHONPATH.
[project.scripts]
data-platform-mcp = "data_platform.mcp.__main__:main"
data-platform-analyst = "data_platform.analyst.__main__:main"
data-platform-export = "data_platform.export.__main__:main"
data-platform-bootstrap = "data_platform.bootstrap.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_platform"]

[dependency-groups]
dev = [
    "pre-commit>=3.7",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pyarrow>=16",  # parquet writer for the v1 export deliverable (dist/); no core-runtime dep
]

# The project IS installed into the environment (src layout, hatchling): `uv sync` puts
# `data_platform` on the import path and the console scripts above on PATH. Nothing needs
# PYTHONPATH=src any more.
[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
mypy_path = "src"
explicit_package_bases = true

# pyarrow ships no complete type stubs; the export writer isolates all pyarrow use in one module.
[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
markers = [
    "golden: MCP tests against the real dist/v1.0 release artifacts; auto-skipped when absent.",
]
